# oreilly_olt_cpp_software_design

Solutions/2_Cpp_Software_Design/: CMakeLists.txt  Makefile
Solutions/2_Cpp_Software_Design/Bridge/: Bridge_1.cpp  Bridge_2.cpp  Bridge_3.cpp  Bridge_Static.cpp  CMakeLists.txt  FastPimpl.cpp  Makefile  Pimpl.cpp
Solutions/2_Cpp_Software_Design/External_Polymorphism/: Animal_EP_1.cpp  Animal_EP_2.cpp  CMakeLists.txt  ExternalPolymorphism_1.cpp  ExternalPolymorphism_2.cpp  Makefile
Solutions/2_Cpp_Software_Design/Motivation/: CMakeLists.txt  Makefile  ObjectOriented.cpp  Procedural.cpp
Solutions/2_Cpp_Software_Design/Strategy/: CMakeLists.txt  FixedVector_Strategy.cpp  Makefile  MultipleStrategies_1.cpp  MultipleStrategies_2.cpp  MultipleStrategies_Static.cpp  Strategy_Classic.cpp  Strategy_Refactoring.cpp  Strategy_Refactoring_Static.cpp  UniquePtr_Strategy.cpp
Solutions/2_Cpp_Software_Design/Type_Erasure/: Animal_TE.cpp  Any_1.cpp  Any_2.cpp  CMakeLists.txt  Function_1.cpp  Function_2.cpp  Function_Ref_1.cpp  Function_Ref_2.cpp  Makefile  PolymorphicAllocator.cpp  TypeErasure_1.cpp  TypeErasure_2.cpp  TypeErasure_MVF.cpp  TypeErasure_PolicyBased.cpp  TypeErasure_Ref_1.cpp  TypeErasure_Ref_2.cpp  TypeErasure_SBO_1.cpp  TypeErasure_SBO_2.cpp  TypeErasure_SBO_MVF.cpp  TypeErasure_dyno.cpp
Solutions/2_Cpp_Software_Design/Visitor/: CMakeLists.txt  Makefile  Variant.cpp  Visitor_Classic.cpp  Visitor_Refactoring.cpp
Tasks/: CMakeLists.txt
Tasks/2_Cpp_Software_Design/: CMakeLists.txt  Makefile
Tasks/2_Cpp_Software_Design/Bridge/: Bridge.cpp  BridgedMembers.cpp  CMakeLists.txt  Car_Bridge.cpp  Car_Strategy.cpp  FastPimpl.cpp  Makefile  Pimpl.cpp
Tasks/2_Cpp_Software_Design/External_Polymorphism/: Animal_EP.cpp  CMakeLists.txt  ExternalPolymorphism_1.cpp  ExternalPolymorphism_2.cpp  Makefile
Tasks/2_Cpp_Software_Design/Motivation/: CMakeLists.txt  DataOriented.cpp  Makefile  ObjectOriented.cpp  Procedural.cpp
Tasks/2_Cpp_Software_Design/Prototype/: CMakeLists.txt  Makefile  Prototype.cpp
Tasks/2_Cpp_Software_Design/Strategy/: CMakeLists.txt  FixedVector_Strategy.cpp  Makefile  MultipleStrategies.cpp  Strategy_Benchmark.cpp  Strategy_Classic.cpp  Strategy_Refactoring.cpp  Strategy_Static.cpp  UniquePtr_Strategy.cpp
Tasks/2_Cpp_Software_Design/Type_Erasure/: Animal_TE.cpp  Any_1.cpp  Any_2.cpp  CMakeLists.txt  Function_1.cpp  Function_2.cpp  Function_Ref.cpp  InplaceAny.cpp  InplaceFunction.cpp  Makefile  PolymorphicAllocator.cpp  TypeErasure_1.cpp  TypeErasure_2.cpp  TypeErasure_MVF.cpp  TypeErasure_Ref.cpp  TypeErasure_SBO_1.cpp  TypeErasure_SBO_2.cpp  UniquePtr_TypeErasure.cpp
Tasks/2_Cpp_Software_Design/Visitor/: AcyclicVisitor.cpp  CMakeLists.txt  Makefile  Variant.cpp  Visitor_Benchmark.cpp  Visitor_Classic.cpp  Visitor_Refactoring.cpp
notes/: notes.md
